--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,58 @@
 # Don't track content of these folders
-portfolio-project/portfolio/__pycache__/
-portfolio-project/venv/
+__pycache__/
+*.py[cod]
+/venv/
 
 # Don't track these particular files
 .DS_Store
 .idea/
 
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
+# C extensions
 *.so
+
+# Distribution / packaging
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# Rope
+.ropeproject
+
+# Django stuff:
+*.log
+*.pot
+
+# Sphinx documentation
+docs/_build/
 
 # Packages #
 ############
